--- a/app/views/static_pages/18wheeler-accidents.html.erb
+++ b/app/views/static_pages/18wheeler-accidents.html.erb
@@ -5,7 +5,7 @@
 	<div class="p-header">
 		<div class="overlay">
 			<div class="container">
-				<h1>18-Wheeler Accident Claims</h1>
+				<h1>18-Wheeler<br> Accident Claims</h1>
 			</div>
 		</div>
 	</div>
@@ -13,40 +13,25 @@
 	<div class="boxes">
 		<div class="container no-padding">
 			<div class="b1">
-				<h4>18 Wheeler Accidents</h4>
-				<p>
-				<!-- Any vehicle on the road can be deadly if it is defective or driven negligently. Due to their size and strength, however, 18 wheelers are in a class all their own. -->
-				Accidents involving 18 wheelers commonly lead to serious injury or death. When drivers operate 18 wheelers negligently, they should be held accountable.</p>
 
 				<h4 class="p-top-2">Accident Factors</h4>
+				<p>Accidents involving 18-wheelers commonly lead to serious injury or death. When drivers operate 18-wheelers negligently, they should be held accountable.</p>
 				<p> Driver negligence is often a major factor in these accidents, but it is not the sole reason they occur. Defective and faulty equipment, as well as hazardous materials and cargo on the actual trucks, have also been known to cause these accidents.</p>
 
 				<h4 class="p-top-2">18-Wheeler Litigation</h4>
 				<p>18-wheeler litigation can be very complex. That is why it is essential for 18-wheeler victims to seek legal assistance for their accident, which requires an attorney who is familiar with both state and federal law.</p>
 			</div>
 
-			<div class="consult-box">
+			<!-- <div class="consult-box">
 				<div class="overlay">
 					<h4>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18-wheeler accident, <span>Noel B. Leonard is ready to pursue justice on your behalf.</span></h4>
 					<hr class="fancy">
-					<h3>
-					Fill out our case evaluation form <%=link_to "here", contact_path %>, <br> or
-					call <%= number_to_phone(2519438638, delimiter: '-', class: 'phone') %><br> to set up an appointment.</h3>
-				</div>
-			</div>
-
-			<!-- <div class="b3">
-				<div class="overlay">
-					<p><span>18 wheeler litigation can be very complex.</span><br>
-					That is why it is essential for 18-wheeler victims to seek legal assistance for their accident, which requires an attorney who is familiar with both state and federal law.</p>
-					<h3>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18-wheeler accident, <span>Noel B. Leonard is ready to pursue justice on your behalf.</span></h3>
+					<h3>Fill out our case evaluation form <%=link_to "here", contact_path %>, <br> or call today to set up an appointment.</h3>
+					<h3 class="phone"><%= number_to_phone(2519438638, delimiter: '-') %></h3>
 				</div>
 			</div> -->
-		</div>
-	</div>
 
-		<div class="sec2">
-			<div class="block1">
+			<div class="blk1"><div class="over">
 				<div class="banner">
 					<h3>What Should You Know?</h3>
 					<p>Noel B. Leonard will fight to get the justice you deserve.</p>
@@ -60,25 +45,50 @@
 				<div class="b">
 					<p><b>Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</b></p>
 				</div>
-			</div>
+			</div></div>
+		</div>
+	</div>
+
+		<div class="sec2">
+			<div class="consult-box">
+							<!-- <div class="banner">
+								<h3>What Should You Know?</h3>
+								<p>Noel B. Leonard will fight to get the justice you deserve.</p>
+								<hr class="fancy">
+							</div>
+
+							<h4>Alabama trucking companies are required to comply with federal safety regulations meant to enhance the safety of both the roads, and the citizens who drive on them.</h4>
+							<div class="a">
+								<p><b>If any of these federal regulations are violated, you may be entitled to file a lawsuit against the trucking company.</b></p>
+							</div>
+							<div class="b">
+								<p><b>Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</b></p>
+							</div>
+						</div> -->
+					<h4>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18-wheeler accident, schedule a consult today.</h4>
+					<h4>Let Noel and his firm help you to understand your rights, and fight for the settlement you deserve.</h4>
+					<hr class="fancy">
+					<h3>Fill out our case evaluation form <%=link_to "here", contact_path %>, <br> or call today to set up an appointment.</h3>
+					<h3 class="phone"><%= number_to_phone(2519438638, delimiter: '-') %></h3>
+				</div>
 
 				<div class="block2">
 					<p>Attorney Leonard has experience representing 18-wheeler accident victims throughout Alabama, helping pursue claims against the following:</p>
 					<ul>
-						<li><i class="fa fa-gavel"></i> Drunk Drivers</li>
-						<li><i class="fa fa-gavel"></i> Negligent Drivers</li>
-						<li><i class="fa fa-gavel"></i> Claims Against the Trucking Company</li>
-						<li><i class="fa fa-gavel"></i> Claims Against Auto Manufacturers and Their Defective Equipment</li>
-						<li><i class="fa fa-gavel"></i> Federal Safety Violation Claims</li>
-						<li><i class="fa fa-gavel"></i> Hazardous Material Claims</li>
-						<li><i class="fa fa-gavel"></i> Dangerous Cargo Claims</li>
+						<li><i class="fa fa-check"></i> Drunk Drivers</li>
+						<li><i class="fa fa-check"></i> Negligent Drivers</li>
+						<li><i class="fa fa-check"></i> Claims Against the Trucking Company</li>
+						<li><i class="fa fa-check"></i> Claims Against Auto Manufacturers and Their Defective Equipment</li>
+						<li><i class="fa fa-check"></i> Federal Safety Violation Claims</li>
+						<li><i class="fa fa-check"></i> Hazardous Material Claims</li>
+						<li><i class="fa fa-check"></i> Dangerous Cargo Claims</li>
 						<li class="pleft-3"><b>And Many More</b></li>
 					</ul>
 				</div>
 			<!-- </div> -->
 
-				<!-- <p>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18 wheeler accident, Foley attorney, Noel B. Leonard is ready to pursue justice on behalf of you or a dearly departed loved one.</p>
-				<p>Contact Noel B. Leonard now, to schedule a legal consultation. Discuss the facts of your 18 wheeler accident case, and receive the settlement you deserve to begin the healing you need. </p>
+				<!-- <p>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18-wheeler accident, Foley attorney, Noel B. Leonard is ready to pursue justice on behalf of you or a dearly departed loved one.</p>
+				<p>Contact Noel B. Leonard now, to schedule a legal consultation. Discuss the facts of your 18-wheeler accident case, and receive the settlement you deserve to begin the healing you need. </p>
 				<p>Call us today (251) 943-8638, or fill out our Case Evaluation Form, and we will contact you as soon as possible.</p>-->
 		</div>
 </div>
