--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -87,7 +87,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		@include sec-default();
 		height:700px;
 		@include sec-bgimage();
-		background-image: url(image_path('auto.jpg'));
+		background-image: url(image_path('flipped.jpg'));
 		background-position: center center;
 
 		.overlay {
@@ -282,10 +282,11 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 }
 
 .motorcycle-accidents {
-	.header-wrap {@include sec-default(); padding:0px; background-color: $navy;}
-	.cst-header { background-image: url(image_path('attorney-desk-slim.jpg')); height: 200px; padding-left: 5%; background-position: center center;}
-	h1 {text-align: left; color: $white; @include tshadow($black); width: 30%; font-family: $open; text-transform: uppercase;
-		span {font-size: 1.5em;}}
+	.header-wrap {@include sec-default(); background-color: $dk-blue; @include sec-bgimage(); background-image: url(image_path('bike-wreck.jpg'));background-position: center right;
+		.cst-header {@include sec-default(); background-color: rgba($dark, .5);  height: 300px; padding-left: 5%; }
+		h1 {text-align: left; color: $white; @include tshadow($black); width: 30%; font-family: $open; text-transform: uppercase; margin-top: 80px;
+			span {font-size: 1.5em;}}
+	}
 
 	.topic-boxes{
 		h3 {text-align: center; margin-bottom:30px;}
@@ -303,36 +304,52 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	.ms1 {@include sec-default(); padding-bottom:50px;
 		p {margin-bottom: 25px; font-size: 17px;}
 	}
-	.left {padding: 65px 20px 20px;
-		h4 {font-weight: bold;}
+	.left {padding: 50px 10px 0px; width: 48%; display: inline-block; float: left;
+		h4 {font-weight: 600; color: $blue; font-family: $open; font-size: 17px; line-height: 1.4em}
 	}
-	.sidebar {@include sec-default(); background-color: $dk-blue; padding: 30px 35px; color: $white; margin-top:-50px;
-		h4 {color: $lt-blue; font-weight: 600;}
+	.sidebar {display: inline-block; float: none; width: 34%; margin-left: 10%; background-color: $dk-blue; margin-top: 50px;
+		// margin-top:-50px;
+		.inner {@include sec-default(); padding: 30px; color: $white;}
+		h4 {color: $lt-blue; font-weight: 600; text-align: center;}
 		// hr {border-top: 1px solid rgba($offwhite, .3);}
+		h3 {font-family: $open; font-size: 20px; text-align: center; background-color: $blue; padding: 5px; font-weight: 600; margin-bottom: 15px;}
 		hr.fancy {width: 80%; margin-bottom:30px;}
+		p {padding: 0 15px; text-align: center;}
+		.bottom {@include sec-default(); @include sec-bgimage(); background-image: url(image_path('temp-mc.jpg'));
+			.over {@include sec-default(); background-color: rgba($dk-blue, .6);  padding: 30px 10px;}
+			ul{padding:0;}
+			li {color: rgba($white, .6); display: inline-block; font-size: 18px; width: 40%; float: left;}
+		}
+
 	}
 
 	.ms2 {@include sec-default(); @include sec-bgimage(); background-image: url(image_path('bike-claim.jpg'));
 	 background-position: center center;
 		.overlay {@include sec-default(); background-color: rgba($dk-blue, .6); padding: 65px 0; text-align: center;}
-		p {color: $white; font-weight: 600; font-size: 19px; width: 70%; @include center-block(); @include tshadowl($dark);}
+		p {color: $white; font-weight: 600; font-size: 20px; width: 70%; @include center-block(); @include tshadowl($dark);}
+		a { color: $lt-blue;}
+
+		h2{font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);text-transform: uppercase;
+			span{color: $lt-blue}
+		}
 	}
 }
 
 .auto-accidents {
 	.auto-s2{
-		@include sec-default(); @include sec-bgimage ();background-image: url(image_path('attorney-desk-slim.jpg')); background-position: center bottom; padding-bottom: 15px;
-		h1 {font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);margin-top: 70px; text-transform: uppercase;}
-		h3 {font-family: $open; color: $white; font-weight: 600; @include tshadow($dark);width: 60%; line-height: 1.4em;}
+		@include sec-default(); @include sec-bgimage (); background-image: url(image_path('home-background.jpg')); background-position: center center;
+		.over {@include sec-default();padding: 20px 50px 40px; }
+		.title-box{ width:45%; float: left; text-align: center;}
+		h1 {font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);margin-top: 40px; text-transform: uppercase;}
+		h3 {font-family: $open; color: $white; font-weight: 600; @include tshadow($dark);line-height: 1.3em;}
 	}
 
 	.main-body {@include sec-default(); text-align: center;
-		@include sec-bgimage(); background-image: url(image_path('auto.jpg'));
-		background-position: center center;
-		// background-attachment: fixed;
-		.inner {@include sec-default(); padding: 50px 0; background-color: rgba($white, .96);}
+		// @include sec-bgimage(); background-position: right bottom; background-size: 40%; background-image: url(image_path('crash.png'));
+		.inner {@include sec-default(); padding: 50px 0; background-color: rgba($white, .9);}
 		.boxes {
 			tr {border-bottom: 1px solid #e1e1e1; }
+			tr.no-border{border-bottom: none;}
 			td { padding: 30px; border-right: 1px solid #e1e1e1;
 				&:last-child{border-right: none;}
 			}
@@ -340,17 +357,23 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 
 	.main-body-2{
-		@include sec-default(); background-color: lighten($dk-blue, 10%); @include sec-bghlf (top left); background-size: 45%; background-image: url(image_path('shattered.jpg')); background-position: bottom left;
-		position: relative; z-index: 1;
-		&::before { @include before(); width: 45%; background-color: rgba($dark, .6);}
-		.over {padding: 80px 60px 60px; text-align: center; float: left; display: inline-block; width: 39%;
-			h2{font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);text-transform: uppercase; font-size: 34px;
-				span{color: $lt-blue}}
+		@include sec-default();
+		background-color: $offwhite;
+		@include sec-bgimage(); background-position: right bottom; background-size: 24%; background-image: url(image_path('crash.png'));
+		.over {width: 50%; display: inline-block();  text-align: center; float: left; @include sec-bgimage (); background-image: url(image_path('auto.jpg'));
+			.overlay{@include sec-default(); background-color: rgba($dk-blue, .94); padding: 55px 50px;}
+			h2{font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);text-transform: uppercase;
+				span{color: $lt-blue}
+			}
+			h3, h4 {font-family: $open; font-weight: 600; color: $white; line-height: 1.4em}
+			h4{font-size: 18px; margin-top:30px;}
+			a, h3.phone {color: $lt-blue; font-weight: bold; @include tshadow($dark);}
 		}
-		.content {width:55%; float: right; padding: 40px 60px;
-			p {color: $white; width: 70%; font-weight: 600; font-size: 18px; margin-bottom: 20px;}
-			li {color: $light; font-family: $open; font-size: 17px; margin-bottom: 14px;
-				i {margin-right:3px; color: $white; font-size: 16px;}
+
+		.content {width:45%; float: right; padding: 30px 0px;
+			p {color: $navy; width: 70%; font-weight: 600; font-size: 18px; margin-bottom: 20px;}
+			li {color: $navy; font-family: $open; font-size: 17px; margin-bottom: 14px;
+				i {margin-right:3px; color: $navy; font-size: 16px;}
 			}
 		}
 	}
@@ -372,8 +395,9 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 .truck-claims { @include sec-default();
 
 	.p-header{
-		@include sec-default(); @include sec-bgimage ();background-image: url(image_path('attorney-desk-slim.jpg')); background-position: center bottom; padding-bottom: 15px;
-		h1 {font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);margin-top: 70px; text-transform: uppercase;}
+		@include sec-default(); @include sec-bgimage ();background-image: url(image_path('flipped.jpg')); background-position: center center;
+		.overlay{@include sec-default(); height: 300px; background-color: rgba($dark, .6);}
+		h1 {font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);margin-top: 130px; text-transform: uppercase; }
 		h3 {font-family: $open; color: $white; font-weight: 600; @include tshadow($dark);width: 60%; line-height: 1.4em;}
 	}
 
@@ -386,9 +410,9 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	  h4 {line-height: 1.5em; color: $dark; }
 	}
 
-	.boxes { @include sec-default(); padding: 50px 0px; margin-bottom:50px; background-color: $white;
+	.boxes { @include sec-default(); padding: 50px 0px;  background-color: $white;
 		.b1, .b3 {width: 48%; display: inline-block; float: left;}
-		.b1 { p{padding-left:5px;} }
+		.b1 { width: 40%; p{padding-left:5px;} }
 		.b3 {width: 45%; float: right;  @include sec-bgimage(); background-image: url(image_path('semi-claim.jpg')); background-position: center center;
 			.overlay {@include sec-default(); background-color: rgba($navy, .9); padding: 40px 50px; text-align: center;}
 			color: $white; font-size: 18px; span { color: $lt-blue;}
@@ -400,14 +424,24 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		h4 {font-family: $open; font-weight: bold; color: $blue;}
 	}
 
+	.blk1 {width: 54%;float: right; @include sec-bgimage(); background-image: url(image_path('highway.jpg'));
+		h4 {font-family: $open; color: $white; text-align: center; line-height: 1.4em; padding: 0 30px 30px; font-weight: normal;}
+		.over {@include sec-default(); padding: 20px; background-color: rgba($navy, .9);}
+			p{font-size: 17px; color: $white;}
+			.a, .b {width: 49%; display: inline-block; float: right; padding: 20px; text-align: center; background-color: $offwhite;
+				p{color: $blue;}
+			}
+			.a{ float: left;}
+		}
+
 	.banner {@include sec-default(); text-align: center; padding-bottom: 20px;
 		h3 {color: $white; font-weight: bold; font-family: $open;}
 		p {font-family: $open;font-weight: 600; font-style: italic; color: $offwhite;}
 	}
 
 	.sec2 {@include sec-default(); padding: 20px 0; background-color: $offwhite; position: relative; z-index: 0; border-top: 1px solid $light;
-		background-image: url(image_path('highway.jpg')); background-size:50%; background-repeat: no-repeat; background-position: top left;
-		&::before {@include before(); width: 50%; background-color: rgba($navy, .9);}
+		background-image: url(image_path('semi-claim.jpg')); background-size:50%; background-repeat: no-repeat; background-position: top left;
+		&::before {@include before(); width: 50%; background-color: rgba($dk-blue, .9);}
 
 		h4 {font-family: $open; color: $white; text-align: center; line-height: 1.4em; padding: 0 30px 30px;}
 
@@ -416,7 +450,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			p {color: $blue; font-weight: 600; width: 85%;}
 			ul {padding-left: 25px;}
 			li {color: $dk-blue; font-size: 17px; margin-top: 15px;}
-			i {width:30px; height: 30px; background-color: $blue; color: $white; margin-right:4px; border-radius: 50%; text-align: center; padding-top: 6px; font-size: 15px;}
+			i {color: $blue; margin-right:3px;font-size: 17px;}
 		}
 
 		.block1 {width: 50%;padding: 20px;
@@ -428,10 +462,14 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		}
 	}
 
-	.consult-box {width: 45%; float: right; background-image: url(image_path('semi-claim.jpg')); margin-top:30px;
-		.overlay {background-color: rgba($dk-blue, .9); padding: 40px; }
-		h4{ font-size: 17px;line-height: 1.5em; font-weight: normal; color: $lt-blue; margin-bottom: 25px; font-weight: 600;}
-		h3 {font-size: 22px; padding-top:15px;}
+	.consult-box {width: 48%; float: left; text-align: center;
+		padding: 40px 30px;
+		h4{ font-size: 18px;line-height: 1.5em; font-weight: normal; color: $white; margin-bottom: 5px; font-weight: 600; @include tshadow($dark);padding-bottom: 15px;
+			&.none {padding-bottom: 10px;}}
+		h3 { padding-top:15px; margin-bottom: 0px;@include tshadow($dark);
+			&.phone {padding-bottom: 5px; font-weight: 600; color: $lt-blue; @include tshadow($dark);}
+		}
+		p {color: $white; font-size: 17px;}
 	}
 }
 
@@ -477,8 +515,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 .contact {
 	.inside-sec {
-		@include sec-default(); @include sec-bgimage(); background-image: url(image_path('attorney-desk.jpg'));position: relative; z-index: 0;
-		&::before {@include before(); height: 70%; background-color: rgba($dark, .8);}
+		@include sec-default(); @include sec-bgimage(); background-image: url(image_path('blur.jpg'));position: relative; z-index: 0;
+		&::before {@include before(); height: 70%; background-color: rgba($dark, .6);}
 	}
 	.cst-header {
 		width:80%; @include center-block(); padding: 60px;
@@ -500,23 +538,25 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		hr.fancy {margin-bottom: 45px; &:after {height:2px;}}
 	}
 	.banner { width: 60%; @include center-block(); padding: 30px 30px 25px; margin-top: -50px; color: $white; text-align: center;
-		background: -webkit-linear-gradient(-180deg, rgba($dark, .98), rgba($navy, .99));
-    background: linear-gradient(-180deg, rgba($dark, .98), rgba($navy, .99));
+		// background: -webkit-linear-gradient(-180deg, rgba($dark, .98), rgba($navy, .99));
+    // background: linear-gradient(-180deg, rgba($dark, .98), rgba($navy, .99));
+    background-color: $navy;
 	 p {font-size: 17px;}
 	}
 	.s2 {@include sec-default();background-color: $offwhite; padding: 10px 0 40px;}
 	.form {margin-top: 40px;}
-
 }
 
 .about {
 	.inside-sec {
-		@include sec-default(); @include sec-bgimage(); background-image: url(image_path('attorney-desk.jpg'));position: relative; z-index: 0;
-		&::before {@include before(); height: 70%; background-color: rgba($dark, .8);}
+		@include sec-default(); @include sec-bgimage(); position: relative; z-index: 0;
+		background-image: url(image_path('traffic.jpg'));
+		&::before {@include before(); height: 56%; background-color: rgba($dark, .8);}
 	}
 	.cst-header {
-		width:80%; @include center-block(); padding: 60px 80px;
-		.inner {@include sec-default();margin-bottom: 80px;border: 1px solid $silver; padding: 60px;}
+		width:65%; @include center-block(); padding: 60px 80px;
+		.inner {@include sec-default();margin-bottom: 80px;padding: 60px 0 0;}
+		// border: 1px solid $silver;
 		h1, h4,p, h3 {color: $white; @include tshadow($black); }
 		h1 {margin-bottom: 0px; }
 		.title-line {width: 65%; @include center-block(); height: 1px; background-color: rgba($silver, .4); margin-bottom: 10px;}
@@ -526,11 +566,11 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		p {line-height: 1.6em; span {color: $br-blue; font-weight: bold;}}
 	}
 
-	.body{width:85%; @include center-block(); background-color: $offwhite;}
-	.s2 {@include sec-default();background-color: $offwhite; margin-bottom: 75px;}
+	.body{width:90%; @include center-block(); background-color: $white; width: 75%;}
+	.s2 {@include sec-default();background-color: $white; margin-bottom: 30px;}
 
-	.practice-claims { width:22%;display: inline-block;float: left;
-		.practice-boxes-op { width: 100%; float: left; padding:35px 30px 25px; text-align: center; color: $white; background-color: $blue; margin: 0;
+	.practice-claims { width:20%;display: inline-block;float: left;
+		.practice-boxes-op { width: 100%; float: left; padding:30px 30px 25px; text-align: center; color: $white; background-color: $blue; margin: 0;
 			h4 {font-family: $open; color: $white;}
 			&.bike {background-color: $dk-blue;}
 			&.auto {background-color: #00447c;}
@@ -538,26 +578,48 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		}
 	}
 
-	.blue-sidebar {width: 78%; float: none; display: inline-block; padding:0;
-		h4 {font-weight: bold; font-family: $open; text-align: center; font-size: 22px; margin-top: 15px; margin-bottom: 25px;color: darken($blue, 10%); }
-		ul{padding-left: 10px;}
-		li { font-family: $open; font-size: 16px; margin-top: 15px; display: inline-block; width:49%;
-				i {margin-right:3px; color: $blue; font-size: 17px;}}
-		.icon {width: 10%;@include center-block();}
-		.top {@include sec-default();padding: 50px; background-color: $white;}
-		.bottom {@include sec-default(); @include sec-bgimage(); background-image: url(image_path('courtroom.jpg')); background-position: center center;
-		 	.overlay{@include sec-default(); background-color: rgba($offwhite, .9); padding: 25px 10px 33px; }
-		 }
+
+	.practice-claims-full { @include sec-default(); background-color: $blue;
+		.practice-boxes-op { width: 33.2%; float: left; display: inline-block; padding:30px 30px 25px; text-align: center; color: $white; background-color: $blue; margin: 0;
+			h4 {font-family: $open; color: $white; line-height: 1.4em; font-weight: 600;}
+			&.bike {background-color: $dk-blue;}
+			&.auto {background-color: #00447c;}
+			i {font-size: 25px; padding: 13px 12px; border:1px solid $white; border-radius: 50%; margin-bottom: 10px;}
+		}
 	}
 
-	.community {@include sec-default(); text-align: center;
-		h4 {color: $white; font-weight: bold; width: 60%;@include center-block(); margin-bottom: 35px; @include tshadow($dark);}}
+	.sidebar {
+		// width: 78%; float: none; display: inline-block;
+		@include sec-default();
+		background-color: $white;
+
+		.top {@include sec-default();text-align: center; margin-bottom: 10px;
+			padding: 40px 20px 25px;
+			p{width: 80%; @include center-block(); line-height: 1.5em; margin-bottom: 0;
+				span{color: $blue; font-weight: 600;}
+			}
+		}
+		hr {width: 40%;}
+
+		.bottom {@include sec-default(); padding-left:30px; padding-bottom:30px;
+			p{padding-left:10px; }
+			.coll {width: 50%; display: inline-block; float: left; padding: 10px}
+
+			ul{padding-left: 10px;}
+			li { font-family: $open; font-size: 16px; margin-top: 15px; margin-bottom: 5px;
+				i {margin-right:5px; color: $blue; font-size: 17px;}
+			}
+			h4 {font-weight: bold; font-family: $open; margin-top: 25px; font-size: 20px; color: darken($blue, 10%); text-transform: uppercase;}
+	 	}
+		h4.closer {font-weight: bold; text-align: center; font-family: $open; margin-top: 25px; font-size: 20px; color: darken($blue, 10%); text-transform: uppercase; margin-bottom:15px;}
+	}
+
+	.body2{ background-color: $offwhite;}
+	.community {@include sec-default(); text-align: center; margin-bottom: 50px;
+		h4 { margin-bottom: 35px; color: $navy; font-weight: 600;}
+	}
 	.charity{display: inline-block; width:20%; float: none;}
 
-	.body2 { @include sec-default();@include sec-bgimage(); background-image: url(image_path('pillars.jpg')); position: relative; z-index: 0; padding: 40px 60px 55px;
-		&::before {@include before(); background-color: rgba($dk-blue, .85); }
-		.s3 { width:90%; @include center-block(); }
-	}
 
 	@include bp(tb) {
 		.inside-sec::before {height: 50%; background-color: rgba($dark, .8);}
