--- a/app/views/static_pages/motorcycle-accidents.html.erb
+++ b/app/views/static_pages/motorcycle-accidents.html.erb
@@ -11,22 +11,24 @@
 
 <div class="ms1">
 	<div class="container">
-		<div class="col-md-6 left">
-			<!-- <%= image_tag('motorcycle.jpg', class: 'img-responsive', alt: '') %>  -->
-				<h4>Accident Attorney, Noel B. Leonard understands firsthand how important motorcycle safety is.</h4>
-				<p>Motorcycles are the least protected vehicles on the road. Unfortunately, this leads to a higher average of injury and death rates than those of traditional motorists.
-				Motorcycle accidents typically result in high medical expenses, that often times, can only be paid after a successful litigation outcome.</p>
-				<p>If you or a loved one has been in a motorcycle accident, you need an attorney who understands your pain, and has the ability to deliver the legal results to help you recover.</p>
+		<div class="left">
+			<!--   -->
+				<!-- <p>Motorcycles are the least protected vehicles on the road, which results in a higher risk of injury than that of traditional motorists.</p> -->
+				<!-- Motorcycle accidents typically lead to high medical expenses, that often times, can only be paid after a successful litigation outcome.</p> -->
+				<h4>Noel B. Leonard is an avid motorcycle enthusiast, who understands the risk firsthand. He represents victims of motorcyle accidents in the counties of Baldwin, Mobile, and Escambia.</h4>
+				<hr>
+				<p>As the least protected vehicles on the road, motorcycles have higher risk of injury than that of traditional motorists.
+				These accidents typically result in high medical expenses, and often, a need for rehabilitative treatment and extended care, as well as substantial time off from work.</p>
+				<p>If you have been injured in a motorcycle accident, you need an attorney you can count on, with the ability to deliver the legal results you need to get your life back in order.</p>
 		</div>
 
-		<div class="col-md-4 col-md-offset-1">
-			<div class="sidebar">
-				<!-- <p>Contact Alabama accident attorney, Noel B. Leonard to schedule a consultation, or call (251) 597-0695 if you live in the city of Foley or Baldwin, Mobile or Escambia Counties, and have been in a motorcycle accident.</p> -->
-				<p>As an avid motorcycle enthusiast, Noel B. Leonard understands this need, and works to accommodate it.</p>
+		<div class="sidebar">
+			<div class="inner">
+				<h4>Noel B. Leonard is on your side.</h4>
+				<!-- <h3><span>Contact us today, to get started on your claim.</span></h3> -->
+				<p>As an accident attorney and a motorcyclist, Noel B. Leonard has the knowledge and experience to successfully litigate your claim.</p>
 				<hr class="fancy">
-				<p>His attorney fees will not exceed the amount awarded from a successful lawsuit, thus ensuring that you have the funds needed to repair your body and your life.</p>
-				<hr class="fancy">
-				<h4>You can trust Noel B. Leonard to fight for you.</h4>
+				<p>Noel and his firm will put all of their efforts into fighting for the compensation you deserve, to help you move forward after your injury.</p>
 			</div>
 		</div>
 	</div>
@@ -35,6 +37,7 @@
 <div class="ms2">
 	<div class="overlay">
 		<div class="container">
+			<h2>Let Noel B. Leonard <span>fight for you.</span></h2>
 			<p>If you live in Baldwin, Mobile, or Escambia County, and you or a loved one has been injured in a motorcycle accident in Alabama, contact accident attorney, Noel B. Leonard today.</p>
 			<hr class="fancy">
 			<p>Learn more about your rights, and start moving forward.<br> Fill out our <%=link_to "case evaluation form", contact_path %>, or call now to schedule a consultation.<br>
