--- a/app/views/static_pages/18wheeler-accidents.html.erb
+++ b/app/views/static_pages/18wheeler-accidents.html.erb
@@ -22,15 +22,6 @@
 				<p>18-wheeler litigation can be very complex. That is why it is essential for 18-wheeler victims to seek legal assistance for their accident, which requires an attorney who is familiar with both state and federal law.</p>
 			</div>
 
-			<!-- <div class="consult-box">
-				<div class="overlay">
-					<h4>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18-wheeler accident, <span>Noel B. Leonard is ready to pursue justice on your behalf.</span></h4>
-					<hr class="fancy">
-					<h3>Fill out our case evaluation form <%=link_to "here", contact_path %>, <br> or call today to set up an appointment.</h3>
-					<h3 class="phone"><%= number_to_phone(2519438638, delimiter: '-') %></h3>
-				</div>
-			</div> -->
-
 			<div class="blk1"><div class="over">
 				<div class="banner">
 					<h3>What Should You Know?</h3>
@@ -65,6 +56,7 @@
 								<p><b>Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</b></p>
 							</div>
 						</div> -->
+					<h2>Let Noel B. Leonard <span>fight for you.</span></h2>
 					<h4>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18-wheeler accident, schedule a consult today.</h4>
 					<h4>Let Noel and his firm help you to understand your rights, and fight for the settlement you deserve.</h4>
 					<hr class="fancy">
