--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -2,7 +2,9 @@
 <% @page_description = "New Subject" %>
 
 <div class="cst-header">
+	<!-- <div class="over"> -->
 	<h1>Useful Resources</h1>
+	<!-- </div> -->
 	<!-- <h4>Links and Websites You Can Use</h4> -->
 </div>
 <div class="clearfix"></div>
