--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -85,30 +85,31 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 	.site-intro{
 		@include sec-default();
-		height:700px;
+		height:550px;
 		@include sec-bgimage();
-		background-image: url(image_path('flipped.jpg'));
+		background-image: url(image_path('home-header.jpg'));
 		background-position: center center;
 
 		.overlay {
 			@include sec-default(); height:100%;
-			background-color: rgba($dark, .6);
-		  padding-top: 200px;
+			background-color: rgba($dark, .5);
+		  padding-top: 130px;
 		}
 
 		.title-block{
 			text-align: center;
-			width:52%;
-			border: 1px solid rgba($silver, .3);
+			width:50%;
+			// border: 1px solid rgba($silver, .1);
 			padding: 40px 30px;
-			margin: auto;
+			margin-left: 5%;
+			// background-color: rgba($dark, .1);
 		}
 		.title-line {width: 65%; @include center-block(); height: 1px; background-color: rgba($silver, .4); margin-bottom: 10px;}
 		.text{width: 95%; @include center-block();padding-top:35px;}
-		h1, h2, h4 {font-weight: bold; color: $silver; @include tshadowl($dark);}
+		h1, h2, h4 {font-weight: bold; color: $white; @include tshadowl($dark);}
 		h1 {font-size: 4em;margin-bottom: 0;}
 		h2 {font-size: 3em;letter-spacing: 10px;}
-		h3{font-family: $open; font-weight: 600; color: $silver; @include tshadowl($black); line-height: 1.5em;}
+		h3{font-family: $open; font-weight: 600; color: $white; @include tshadowl($black); line-height: 1.5em;}
 		h4{font-family: $open; line-height: 1.5em; font-size: 20px; font-weight: 600;}
 	}
 
@@ -247,8 +248,6 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		.text {width: 30%; float: left;display: inline-block; height: 100%;}
 		.content {width: 50%; float: right; height: 100%; }
 	}
-
-
 }
 
 .page {
@@ -463,13 +462,17 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 
 	.consult-box {width: 48%; float: left; text-align: center;
-		padding: 40px 30px;
-		h4{ font-size: 18px;line-height: 1.5em; font-weight: normal; color: $white; margin-bottom: 5px; font-weight: 600; @include tshadow($dark);padding-bottom: 15px;
+		padding: 20px 30px 10px;
+		h4{ font-size: 18px;line-height: 1.5em; font-weight: normal; color: $white; margin-bottom: 5px; font-weight: 600; @include tshadow($dark);padding-bottom: 5px;
 			&.none {padding-bottom: 10px;}}
 		h3 { padding-top:15px; margin-bottom: 0px;@include tshadow($dark);
 			&.phone {padding-bottom: 5px; font-weight: 600; color: $lt-blue; @include tshadow($dark);}
 		}
 		p {color: $white; font-size: 17px;}
+
+		h2{font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);text-transform: uppercase; margin-bottom: 30px;
+				span{color: $lt-blue}
+			}
 	}
 }
 
@@ -483,10 +486,11 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 }
 
 .resources { background-color: $light;
-	background-image: url(image_path('lawyer-ph'));
+	background-image: url(image_path('blur'));
 	@include sec-bgimage();
 	.cst-header {
 		height: 250px;
+		background-color: rgba($dark, .55);
 
 		h1 {color: $white; font-size: 45px; @include tshadow(rgba($dark, .6));font-family: $open; margin-top: 60px;}
 		h4 {font-weight: bold; color: $white; @include tshadow(rgba($dark, .8)); font-family: $open;}
@@ -550,7 +554,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 .about {
 	.inside-sec {
 		@include sec-default(); @include sec-bgimage(); position: relative; z-index: 0;
-		background-image: url(image_path('traffic.jpg'));
+		background-image: url(image_path('blur.jpg'));
 		&::before {@include before(); height: 56%; background-color: rgba($dark, .8);}
 	}
 	.cst-header {
@@ -578,12 +582,17 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		}
 	}
 
-
 	.practice-claims-full { @include sec-default(); background-color: $blue;
-		.practice-boxes-op { width: 33.2%; float: left; display: inline-block; padding:30px 30px 25px; text-align: center; color: $white; background-color: $blue; margin: 0;
+		.practice-boxes-op { width: 33.3%; float: left; display: inline-block; padding:30px 30px 25px; text-align: center; color: $white; background-color: $blue; margin: 0;
+			position: relative;z-index: 0;
+			@include sec-bgimage();
+			background-position: center center;
+			&::before {@include before(); background-color: rgba($blue, .85);}
+
 			h4 {font-family: $open; color: $white; line-height: 1.4em; font-weight: 600;}
-			&.bike {background-color: $dk-blue;}
-			&.auto {background-color: #00447c;}
+			&.bike {background-image: url(image_path('speed-bike.jpg'));&::before {background-color: rgba($dk-blue, .85);}}
+			&.auto { background-image: url(image_path('accident1.jpg'));&::before {background-color: rgba(0,68,124, .85)}}
+			&.trucker {background-image: url(image_path('semi-wreck.jpg'));}
 			i {font-size: 25px; padding: 13px 12px; border:1px solid $white; border-radius: 50%; margin-bottom: 10px;}
 		}
 	}
