--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -250,36 +250,6 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 }
 
-.page {
-	.cst-header {background-image: url(image_path('courtroom.jpg')); background-position: center center; height:300px; position: relative; z-index: 0;
-		&::before {@include before(); background-color: rgba($navy, .8);}
-		h1, h4 {color: $white; @include tshadow($black); }
-	}
-
-	.s1 {padding:0 30px 50px;
-		text-align: center;
-	}
-	.s2 {background-color: $white; @include sec-bgimage(); background-size: 50%; background-position: left center; background-image: url(image_path('bcch1.jpg'));}
-	.s3 { padding: 50px;}
-
-	.blue-sidebar {width: 45%; float: right;
-		h4 {font-weight: bold; margin-bottom: 10px;color: darken($blue, 10%); }
-		ul{padding-left: 10px;}
-		li {font-weight: bold; font-size: 15px; margin-top: 15px; }
-		.icon {width: 30%;@include center-block();}
-	}
-
-	.community {@include sec-default(); text-align: center;
-		h4 {color: $blue; font-weight: bold; width: 60%;@include center-block(); margin-bottom: 35px;}}
-	.charity{display: inline-block; width:20%; float: none;}
-
-	.practice-boxes-op {display: inline-block; width: 22%; float: none; padding:35px 30px 25px; text-align: center; color: $white; background-color: $dk-blue;
-		margin: 0 5px 0 10px; position: relative;
-		margin-top: -50px;
-		h4 {font-family: $open; color: $white;}
-	}
-}
-
 .motorcycle-accidents {
 	.header-wrap {@include sec-default(); background-color: $dk-blue; @include sec-bgimage(); background-image: url(image_path('bike-wreck.jpg'));background-position: center right;
 		.cst-header {@include sec-default(); background-color: rgba($dark, .5);  height: 300px; padding-left: 5%; }
@@ -517,7 +487,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	}
 }
 
-.contact {
+.page {
 	.inside-sec {
 		@include sec-default(); @include sec-bgimage(); background-image: url(image_path('blur.jpg'));position: relative; z-index: 0;
 		&::before {@include before(); background-color: rgba($dark, .9);}
@@ -542,8 +512,6 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		hr.fancy {margin-bottom: 45px; &:after {height:2px;}}
 	}
 	.banner { width: 60%; @include center-block(); padding: 30px 30px 25px; margin-top: -50px; color: $white; text-align: center;
-		// background: -webkit-linear-gradient(-180deg, rgba($dark, .98), rgba($navy, .99));
-    // background: linear-gradient(-180deg, rgba($dark, .98), rgba($navy, .99));
     background-color: $navy;
 	 p {font-size: 17px;}
 	}
@@ -644,3 +612,50 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 
 
+.contact {
+	.header-wrap {@include sec-default(); background-color: $dk-blue; @include sec-bgimage(); background-image: url(image_path('blur.jpg'));background-position: center right;
+		.cst-header {@include sec-default(); background-color: rgba($dark, .8);  height: 160px; padding-left: 5%; }
+		.title {width: 40%; float: left;}
+		h1, h3 {color: $white; @include tshadow($black); font-weight: bold; }
+		h1 {margin-bottom: 0px; }
+		.title-line {width: 60%; @include center-block(); height: 1px; background-color: rgba($silver, .4); margin-bottom: 10px;}
+		h3{ letter-spacing: 10px;}
+	}
+
+	.ms1 {@include sec-default(); padding-bottom:30px;
+		p {margin-bottom: 25px; font-size: 17px;}
+	}
+	.left {padding: 50px; width: 50%; display: inline-block; float: left;
+		h4 {font-weight: 600; color: $blue; font-family: $open; font-size: 17px; line-height: 1.4em}
+	}
+	.sidebar {
+		hr.fancy {width: 70%; margin-bottom:30px;}
+
+		.contact-info { width: 33%; margin-right: 10%; display: inline-block; float: right; text-align: center;
+			margin-top: -50px; padding: 35px 25px; background-color: $dk-blue;
+			h4 {color: $white; font-weight: 600; font-size: 20px;
+				span {text-transform: lowercase;}
+				&.email span{font-family: $open;}
+			}
+			ul.social-links {
+		    li {display: inline-block; font-size: 20px; margin-right: 20px;
+		    	i{color: $white;}
+		      &:last-child{ margin-right: 0;}
+		    }
+		  }
+		}
+	}
+
+	.sec-form {@include sec-default(); background-color: $offwhite; padding: 40px 0}
+
+	.ms2 {@include sec-default(); @include sec-bgimage(); background-image: url(image_path('bike-claim.jpg'));
+	 background-position: center center;
+		.overlay {@include sec-default(); background-color: rgba($dk-blue, .6); padding: 65px 0; text-align: center;}
+		p {color: $white; font-weight: 600; font-size: 20px; width: 70%; @include center-block(); @include tshadowl($dark);}
+		a { color: $lt-blue;}
+
+		h2{font-family: $open; color: $white; font-weight: bold; @include tshadow($dark);text-transform: uppercase;
+			span{color: $lt-blue}
+		}
+	}
+}
